--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
-<html>
+<html ng-app='Chess'>
   <head>
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css' rel='stylesheet' />
+    <style>
+      .cursor
+      {
+        cursor: pointer;
+      }
+      td
+      {
+        width: 50px;
+        height: 50px;
+        background: black;
+      }
+      td.even
+      {
+        background: white;
+      }
+      #chess-board
+      {
+        border: 1px solid #ccc;
+        margin-top: 40px;
+      }
+
+      .invert td
+      {
+        background: white;
+        color: black;
+      }
+
+      .invert td.even
+      {
+        background: black;
+        color: white;
+      }
+      .invert table td.highlighted
+      {
+        background: green;
+      }
+      #chess-board .pieceSelected
+      {
+        background: red;
+        color: white;
+      }
+    </style>
     
   </head>
-  <body ng-controller='MainCtrl as main'>
+  <body ng-controller='MainCtrl as game' class='invert'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-6 col-md-offset-4'>
+          <table class='table' id='chess-board'>
+            <tbody>
+              <tr ng-repeat='row in [1,2,3,4,5,6,7,8]'>
+                <td ng-repeat='col in [1,2,3,4,5,6,7,8]' ng-class='{even: ((row + col) % 2), highlighted: game.isCellHighlighted(row, col), pieceSelected: game.isPieceSelected(row, col), cursor: game.cellHasPiece(row, col)}' ng-click='game.cellClicked(row, col)'>
+                  &nbsp;{{game.Board | get_piece_name:row:col}}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js'></script>
     <script src='js/chess.js'></script>
-    <script src-'js/main.js'></script>
+    <script src='js/main.js'></script>
   </body>
 </html>
