--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             </tbody>
           </table>
         </div>
+        <div class='col-md-2'>
+          <h6>Turn To Play: <em>{{game.Board.turn}}</em></h6>
+        </div>
       </div>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.js'></script>
